# django-components

./: CHANGELOG.md  GIT_TODOS.md  README.md  TODO.md  TODO_COMPILERS.md  TODO_TIPS.md  TODO_articles.md  TODO_docs.md  abc.html  abcd.html  bug_analysis_report.md  feature-comp-dvc.md  interview.md  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  versions.json
.asv/results/ci-linux/: 76d0abb8-virtualenv-py3.13-django5.1-djc-core-html-parser.json
.devcontainer/: devcontainer.json
.github/workflows/: docs.yml  issue-to-discord.yml  linkcheck.yml  tests.yml
0.107/: 404.html  index.html
0.110/: sitemap.xml
0.110/CODE_OF_CONDUCT/: index.html
0.110/SUMMARY/: index.html
0.110/reference/SUMMARY/: index.html
0.131/benchmarks/: index.json  info.json  regressions.xml
0.137/: 404.html
0.137/overview/performance/: index.html
0.139/migrating_from_safer_staticfiles/: index.html
0.139/release_notes/: index.html
0.139/search/: search_index.json
dev/: sitemap.xml
dev/CHANGELOG/: index.html
dev/SUMMARY/: index.html
dev/license/: index.html
dev/search/: search_index.json
dev/slot_rendering/: index.html
dev/slots_and_blocks/: index.html
djc_template_parser/: Cargo.toml  __init__.pyi  pyproject.toml
djc_template_parser/djc_template_parser/: __init__.py  __init__.pyi
djc_template_parser/src/: grammar.pest  lib.rs  tag_parser.rs
djc_template_parser/tests/: benchmark.py  test_tag_parser.py
docs/: dependency_mgmt.md
docs/benchmarks/: index.json  info.json  regressions.xml
docs/getting_started/: .nav.yml
docs/overview/: installation.md  welcome.md
docs/reference/: template_tags.md
docs/scripts/: community_packages.py  extensions.py  reference.py
github-context/: README.md  main.py  requirements.txt  setup.py
github-context/config/: settings.yaml
github-context/scripts/: create_summary.py  weekly_update.py
github-context/src/: __init__.py  cli.py  config.py  github_client.py  models.py  orchestrator.py  processor.py  storage.py
other/: GIT_TODOS_1.md  TODO_DREAMTEAM.md  USED_BY.md  alpine-comp-modified.js  alpine-comp-orig.js  alpine-modified.js  alpine-orig.js  alpine-partial.js  alpine-test-index.html  demo.html  ngi_appl_notes.txt  promo
sampleproject/: global.d.ts  meta.json  package-lock.json  package.json  sass.js  tsconfig.json
sampleproject/calendarapp/: apps.py
sampleproject/components/: MyButton.vue  WithPython.vue  alpinui.py  urls.py
sampleproject/sampleproject/: settings.py
sampleproject/vue/: linked.py  my_button.py  with_python.py
scripts/: supported_versions.py
src/django_components/: __init__.py  app_settings.py  apps.py  attributes.py  autodiscovery.py  cache.py  compilers.py  component.py  component_media.py  context.py  dependencies.py  extension.py  node.py  plugin.py  plugin_runner.py  provide.py  slots.py  template.py  types.py
src/django_vue/: apps.py  component.py  pyproject.toml
src/django_vue/plugins/: alpine_slot.py  html_component.py  vue.py
src/django_vue/templatetags/: vue.py
src/django_vue/utils/: cotton2django.py  django_node.py  django_tag_parser.py  html_parser.py  html_tags.py  js.py  misc.py  vue_alpine2django.py  vue_parser.py  vue_vue2alpine.py
tests/: test_benchmark_djc.py  test_benchmark_djc_const.py  test_cache.py  test_command_create.py  test_component.py  test_component_media.py  test_css.py  test_dependencies.py  test_dependency_rendering.py  test_dependency_rendering_e2e.py  test_expression.py  test_extension.py  test_tag_parser.py
todo/: TODO.md  TODO_FUNDING.md  TODO_VUE_COMPAT.md  TODO_docs.md  TODO_v2.md
(+213 files in other folders)
